--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     babel example
-    <script src="/build/bundle.min.js"></script>
+    <script src="/build/bundle.js"></script>
   </body>
 </html>
